Refactor: Cleanups and fix compile